--- a/2qrindex.html
+++ b/2qrindex.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="card">
-        <img id="image" src="/image-qr-code.png" alt="image preview">
+        <img id="image" src="image-qr-code.png" alt="image preview">
         <h2>
             Improve your front-end skills by building projects
         </h2>
